Migrates to scalajdbc and skinny-orm

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -61,6 +61,10 @@ play.modules {
 
   # If there are any built-in modules that you want to disable, you can list them here.
   #disabled += ""
+
+  enabled += "scalikejdbc.PlayModule"
+  enabled += "scalikejdbc.PlayDBApiAdapterModule"
+  #disabled += "play.api.db.DBModule"
 }
 
 ## IDE
@@ -365,10 +369,15 @@ db {
   # By convention, the default datasource is named `default`
 
   # https://www.playframework.com/documentation/latest/Developing-with-the-H2-Database
-  default.driver = org.sqlite.JDBC
-  default.url = "jdbc:sqlite:bins.sqlite"
+  #default.driver = org.sqlite.JDBC
+  #default.url = "jdbc:sqlite:bins.sqlite"
   #default.username = sa
   #default.password = ""
+
+  default.driver = org.postgresql.Driver
+  default.url = "jdbc:postgresql://192.168.1.115:5432/postgres"
+  default.username = postgres
+  default.password = test
 
   # You can turn on SQL logging for any datasource
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
