--- a/conf/application.conf
+++ b/conf/application.conf
@@ -40,7 +40,8 @@ akka {
 # ~~~~~
 # The secret key is used to sign Play's session cookie.
 # This must be changed for production, but we don't recommend you change it in this file.
-play.http.secret.key = "changeme"
+play.http.secret.key = "rpkTGtoJvLIdIV?WU=0@yW^x:pcEGyAt`^p/P3G0fpbj9:uDnD@caSjCDqA0@tB="
+# ^ CHANGE THIS
 
 ## Modules
 # https://www.playframework.com/documentation/latest/Modules
@@ -64,6 +65,7 @@ play.modules {
 
   enabled += "scalikejdbc.PlayModule"
   enabled += "scalikejdbc.PlayDBApiAdapterModule"
+  enabled += "modules.SecurityModule"
   #disabled += "play.api.db.DBModule"
 }
 
@@ -238,6 +240,7 @@ play.filters {
   # CSRFFilter, AllowedHostFilters, and SecurityHeadersFilters are enabled by default.
   #enabled += filters.ExampleFilter
   enabled += play.filters.cors.CORSFilter
+  disabled += play.filters.csrf.CSRFFilter
 
   # Disabled filters remove elements from the enabled list.
   #disabled += filters.ExampleFilter
@@ -262,7 +265,7 @@ play.filters {
     #pathPrefixes = ["/some/path", ...]
 
     # The allowed origins. If null, all origins are allowed.
-    allowedOrigins = ["http://localhost:3000", "http://localhost:5000"]
+    allowedOrigins = ["http://localhost:3000", "http://localhost:5000", "https://oidc.6502.no", "https://localhost:9090"]
 
     # The allowed HTTP methods. If null, all methods are allowed
     #allowedHttpMethods = ["GET", "POST"]
@@ -383,3 +386,12 @@ db {
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
   #default.logSql=true
 }
+
+oidc {
+  baseUri = "https://oidc.6502.no/auth"
+  realm = "test"
+  clientId = "testid"
+  clientSecret = "d2e8be05-4154-4b49-8aa5-2b7f252ffc26"
+}
+
+baseUrl="http://localhost:9000"
